# VacSol-ML-ESKAPE-Installable

./: .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements.txt
vacsol_ml/: cli.py
vacsol_ml/config/: settings.py  urls.py
vacsol_ml/eskapeml/: Untitled.ipynb  sequences.fasta  urls.py  views.py
vacsol_ml/eskapeml/Analysis_Results/: biological_properties.csv
vacsol_ml/eskapeml/templates/: base.html  index.html  processing.html  results_vacsolml.html  upload_vacsolml.html
